fixed alignment of message bar to allow button to be next to it

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -11,15 +11,19 @@ body {
 
 /* INPUT FIELD */
 .input-container {
+  justify-content: center;
   background-color: #4d5d3b;
   width: 400px;
 }
 
 .input-field {
-  padding:0.5em;
+  display: inline-block;
+  padding: 0.5rem 0;
+  margin: 0 10px;
+  width: 340px;
   background-color:#6f7766;
-  max-width: 400px;
   border-radius: 1rem;
+  transition: 1s;
 }
 
 .input-field:focus {
